--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -10,6 +10,7 @@ CONFIG_BLK_DEV_DM=Y
 CONFIG_BT_RFCOMM=Y
 CONFIG_HID_ROCCAT_PYRA=Y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=Y
+CONFIG_CRYPTO_MD4=Y
 CONFIG_SERIAL_S5PV210=Y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=Y
 CONFIG_RC_CORE=Y
@@ -54,6 +55,7 @@ CONFIG_HID_SUNPLUS=Y
 CONFIG_HID_PICOLCD=Y
 CONFIG_SND_SOC=Y
 CONFIG_HID_THRUSTMASTER=Y
+CONFIG_DNS_RESOLVER=Y
 CONFIG_CRYPTO_AUTHENC=Y
 CONFIG_ION_EXYNOS=Y
 CONFIG_LEDS_AN30259A=Y
@@ -62,12 +64,14 @@ CONFIG_CRYPTO_DES=Y
 CONFIG_NLS_CODEPAGE_437=Y
 CONFIG_NET_CLS_U32=Y
 CONFIG_SERIO=Y
+CONFIG_SUNRPC_GSS=M
 CONFIG_NET_EMATCH_U32=Y
 CONFIG_NF_CONNTRACK_SANE=Y
 CONFIG_NF_CT_PROTO_DCCP=Y
 CONFIG_ZLIB_INFLATE=Y
 CONFIG_CRYPTO_TWOFISH_COMMON=Y
 CONFIG_TOUCHSCREEN_MELFAS=Y
+CONFIG_LOCKD=M
 CONFIG_ANDROID_TIMED_GPIO=Y
 CONFIG_NETFILTER_XT_MATCH_STRING=Y
 CONFIG_IP_NF_TARGET_LOG=Y
@@ -178,6 +182,7 @@ CONFIG_SOUND=Y
 CONFIG_UNIX=Y
 CONFIG_CRYPTO_HASH2=Y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=Y
+CONFIG_NFS_FS=M
 CONFIG_BCM4334=Y
 CONFIG_INET_ESP=Y
 CONFIG_HID_QUANTA=Y
@@ -203,6 +208,7 @@ CONFIG_REGULATOR_MAX77693=Y
 CONFIG_NF_CONNTRACK_AMANDA=Y
 CONFIG_FB_CFB_IMAGEBLIT=Y
 CONFIG_ZLIB_DEFLATE=Y
+CONFIG_SUNRPC=M
 CONFIG_FW_LOADER=Y
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=Y
 CONFIG_EXT4_FS=Y
@@ -337,6 +343,7 @@ CONFIG_RC_MAP=Y
 CONFIG_HID_PANTHERLORD=Y
 CONFIG_SND=Y
 CONFIG_IR_RC6_DECODER=Y
+CONFIG_CIFS=M
 CONFIG_HID_MULTITOUCH=Y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=Y
 CONFIG_HID_ELECOM=Y
@@ -362,6 +369,7 @@ CONFIG_HID_NTRIG=Y
 CONFIG_DECOMPRESS_GZIP=Y
 CONFIG_I2C_CHARDEV=Y
 CONFIG_NLS_UTF8=Y
+CONFIG_JOYSTICK_XPAD=M
 CONFIG_MOBICORE_SUPPORT=Y
 CONFIG_NETFILTER_TPROXY=Y
 CONFIG_USB_SERIAL_PL2303=Y
