--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -377,6 +377,7 @@ CONFIG_NLS_ASCII=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
+CONFIG_TOUCH_WAKE=y
 CONFIG_SND_USB=y
 CONFIG_VIDEOBUF2_MEMOPS=y
 CONFIG_RD_GZIP=y
@@ -715,7 +716,7 @@ CONFIG_NEON=y
 CONFIG_GENERIC_ACL=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="-LiteGX-v1.9"
+CONFIG_LOCALVERSION="-LiteGX-v2.0"
 CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
 CONFIG_FUNCTION_TRACER=y
