--- a/arch/arm/configs/litegx_defconfig
+++ b/arch/arm/configs/litegx_defconfig
@@ -1,5 +1,6 @@
 #
-# LiteGX KERNEL defconfig
+# Automatically generated make config: don't edit
+# Linux/arm 3.0.31 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -36,7 +37,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="/home/androidgx/projects/toolchains/linaro4.7/bin/arm-eabi-"
-CONFIG_LOCALVERSION="-LiteGX-v2.1"
+CONFIG_LOCALVERSION="-LiteGX-v2.2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -178,11 +179,11 @@ CONFIG_LBDAF=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="row"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -501,23 +502,8 @@ CONFIG_EXYNOS4_MSHC_DDR=y
 #
 # Debugging Feature
 #
-CONFIG_SEC_DEBUG=y
-CONFIG_SEC_DEBUG_SCHED_LOG=y
-# CONFIG_SEC_DEBUG_SOFTIRQ_LOG is not set
-CONFIG_SEC_DEBUG_SCHED_LOG_NONCACHED=y
-# CONFIG_SEC_DEBUG_SEMAPHORE_LOG is not set
-CONFIG_SEC_DEBUG_USER=y
-# CONFIG_SEC_DEBUG_PM_TEMP is not set
-# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
-# CONFIG_SEC_DEBUG_AUXILIARY_LOG is not set
-# CONFIG_SEC_DEBUG_FUPLOAD_DUMP_MORE is not set
-# CONFIG_SEC_DEBUG_UMP_ALLOC_FAIL is not set
-# CONFIG_SEC_DEBUG_LIST_CORRUPTION is not set
-CONFIG_SEC_WATCHDOG_RESET=y
-CONFIG_SEC_WATCHDOG_PET_TIME=0
-CONFIG_SEC_LOG=y
-CONFIG_SEC_LOG_NONCACHED=y
-CONFIG_SEC_LOG_LAST_KMSG=y
+# CONFIG_SEC_DEBUG is not set
+# CONFIG_SEC_LOG is not set
 CONFIG_EHCI_IRQ_DISTRIBUTION=y
 
 #
@@ -710,23 +696,23 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ADAPTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND_FLEXRATE is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 # CONFIG_CPU_FREQ_GOV_ADAPTIVE is not set
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_SLP is not set
@@ -1310,6 +1296,7 @@ CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_SIM_SLOT_SWITCH is not set
 # CONFIG_LTE_MODEM_CMC220 is not set
 # CONFIG_INTERNAL_MODEM_IF is not set
+CONFIG_TOUCH_WAKE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1393,6 +1380,8 @@ CONFIG_WIFI_CONTROL_FUNC=y
 # CONFIG_BCM4330 is not set
 CONFIG_BCM4334=y
 # CONFIG_BCM43241 is not set
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=100
 # CONFIG_HOSTAP is not set
@@ -3108,6 +3097,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
+# CONFIG_DYNAMIC_FSYNC is not set
 
 #
 # Kernel hacking
