--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -200,6 +200,7 @@ CONFIG_SAMSUNG_SMARTDOCK=y
 CONFIG_CRYPTO_MANAGER_TESTS=y
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC3=0
 CONFIG_NETFILTER_XT_MATCH_STRING=y
+CONFIG_ARM_CPU_TOPOLOGY=y
 CONFIG_IP_NF_TARGET_LOG=y
 CONFIG_HAS_WAKELOCK=y
 CONFIG_HDMI_SWITCH_HPD=y
@@ -713,7 +714,7 @@ CONFIG_NEON=y
 CONFIG_GENERIC_ACL=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="-LiteGX-v2.2"
+CONFIG_LOCALVERSION="-LiteGX-v2.3"
 CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
 CONFIG_FUNCTION_TRACER=y
