--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -208,6 +208,7 @@ CONFIG_S3C_PL330_DMA=y
 CONFIG_USB_STORAGE=y
 CONFIG_EXYNOS4_SETUP_I2C3=y
 CONFIG_STANDALONE=y
+CONFIG_SCHED_MC=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_IR_LIRC_CODEC=y
 CONFIG_MMC_EMBEDDED_SDIO=y
@@ -250,6 +251,7 @@ CONFIG_V4L_USB_DRIVERS=y
 CONFIG_WEXT_CORE=y
 CONFIG_GENERIC_IRQ_CHIP=y
 CONFIG_NLS=y
+CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_S3C_MEM=y
 CONFIG_HID_MAGICMOUSE=y
@@ -714,7 +716,7 @@ CONFIG_NEON=y
 CONFIG_GENERIC_ACL=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="-LiteGX-v2.5"
+CONFIG_LOCALVERSION="-LiteGX-v2.6"
 CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
 CONFIG_FUNCTION_TRACER=y
