--- a/arch/arm/configs/litegx_defconfig
+++ b/arch/arm/configs/litegx_defconfig
@@ -37,7 +37,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="/home/androidgx/projects/toolchains/linaro4.7/bin/arm-eabi-"
-CONFIG_LOCALVERSION="-LiteGX-v3.0"
+CONFIG_LOCALVERSION="-LiteGX-v3.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -177,7 +177,7 @@ CONFIG_LBDAF=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_NOOP is not set
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_ROW=y
 # CONFIG_IOSCHED_CFQ is not set
