--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -15,6 +15,7 @@ CONFIG_SERIAL_S5PV210=Y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=Y
 CONFIG_RC_CORE=Y
 CONFIG_HID_ROCCAT_KOVAPLUS=Y
+CONFIG_TCP_CONG_HTCP=M
 CONFIG_BINFMT_MISC=Y
 CONFIG_NETFILTER_XT_MATCH_HELPER=Y
 CONFIG_SENSORS_LPS331=Y
@@ -254,6 +255,7 @@ CONFIG_MMC_MSHCI=Y
 CONFIG_NETFILTER_XT_MATCH_TIME=Y
 CONFIG_NETFILTER_XT_MATCH_MAC=Y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=Y
+CONFIG_TCP_CONG_WESTWOOD=Y
 CONFIG_LIBCRC32C=Y
 CONFIG_CRYPTO_SHA256=Y
 CONFIG_SND_SAMSUNG_I2S=Y
@@ -342,6 +344,7 @@ CONFIG_HID_PANTHERLORD=Y
 CONFIG_SND=Y
 CONFIG_IR_RC6_DECODER=Y
 CONFIG_CIFS=M
+CONFIG_TCP_CONG_BIC=M
 CONFIG_HID_MULTITOUCH=Y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=Y
 CONFIG_HID_ELECOM=Y
