--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -33,10 +33,8 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
 CONFIG_HID_ROCCAT_PYRA=y
 CONFIG_INOTIFY_USER=y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=y
-CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_VIDEO_EXYNOS_FIMC_IS=y
-CONFIG_CRYPTO_MD4=y
 CONFIG_SERIAL_S5PV210=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_EXYNOS4_SETUP_CSIS=y
@@ -46,6 +44,7 @@ CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_RC_CORE=y
 CONFIG_MMC_NOT_USE_SANITIZE=y
 CONFIG_HID_ROCCAT_KOVAPLUS=y
+CONFIG_TCP_CONG_HTCP=y
 CONFIG_BINFMT_MISC=y
 CONFIG_SEC_THERMISTOR=y
 CONFIG_NETFILTER_XT_MATCH_HELPER=y
@@ -77,7 +76,7 @@ CONFIG_IPV6=y
 CONFIG_VIDEO_S5K6A3=y
 CONFIG_CRYPTO_AEAD=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_USB_DEVICEFS=y
 CONFIG_FB_BGRA_ORDER=y
@@ -147,7 +146,6 @@ CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_TIMERFD=y
 CONFIG_HID_THRUSTMASTER=y
-CONFIG_DNS_RESOLVER=y
 CONFIG_TRACEPOINTS=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_S3C64XX_DEV_SPI=y
@@ -171,7 +169,6 @@ CONFIG_NET_CLS_U32=y
 CONFIG_ARM_GIC=y
 CONFIG_SERIO=y
 CONFIG_SCHEDSTATS=y
-CONFIG_SUNRPC_GSS=m
 CONFIG_RTC_INTF_SYSFS=y
 CONFIG_NET_EMATCH_U32=y
 CONFIG_BLK_DEV_INITRD=y
@@ -189,7 +186,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_TOUCHSCREEN_MELFAS=y
 CONFIG_USB_DEVICE_CLASS=y
-CONFIG_LOCKD=m
 CONFIG_MACH_M0=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ARM=y
@@ -287,7 +283,6 @@ CONFIG_S5P_DEV_MFC=y
 CONFIG_RFKILL=y
 CONFIG_NETDEVICES=y
 CONFIG_NET_KEY=y
-CONFIG_IOSCHED_DEADLINE=y
 CONFIG_S3C_DEV_I2C5=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPU_TLB_V7=y
@@ -361,7 +356,6 @@ CONFIG_FB_S5P_NR_BUFFERS=2
 CONFIG_BATTERY_WPC_CHARGER=y
 CONFIG_MMC_BLOCK_BOUNCE=y
 CONFIG_GENERIC_CLOCKEVENTS=y
-CONFIG_IOSCHED_CFQ=y
 CONFIG_MFD_CORE=y
 CONFIG_RTC_DRV_S3C=y
 CONFIG_CPU_CP15_MMU=y
@@ -378,6 +372,7 @@ CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_NLS_ASCII=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_DETECT_HUNG_TASK=y
+CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
 CONFIG_TOUCH_WAKE=y
 CONFIG_SND_USB=y
@@ -472,7 +467,6 @@ CONFIG_VIDEO_SAMSUNG_MEMSIZE_FLITE1=10240
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_ARM_ERRATA_743622=y
 CONFIG_NETDEV_10000=y
-CONFIG_NFS_FS=m
 CONFIG_BCM4334=y
 CONFIG_ARCH_EXYNOS4=y
 CONFIG_XPS=y
@@ -490,7 +484,6 @@ CONFIG_PM_OPP=y
 CONFIG_KEYBOARD_ATKBD=y
 CONFIG_NF_NAT=y
 CONFIG_CPU_IDLE=y
-CONFIG_NFS_COMMON=y
 CONFIG_LEDS_AAT1290A=y
 CONFIG_REGULATOR=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -561,7 +554,6 @@ CONFIG_DEBUG_FS=y
 CONFIG_BASE_FULL=y
 CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_ZLIB_DEFLATE=y
-CONFIG_SUNRPC=m
 CONFIG_VIDEO_TVOUT=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_GPIO_SYSFS=y
@@ -580,7 +572,6 @@ CONFIG_CRYPTO_SHA1=y
 CONFIG_ARM_DMA_MEM_BUFFERABLE=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
-CONFIG_LOCKD_V4=y
 CONFIG_USB_GADGET_DUALSPEED=y
 CONFIG_WATCHDOG=y
 CONFIG_HAS_IOMEM=y
@@ -616,7 +607,6 @@ CONFIG_AID_DIMMING=y
 CONFIG_PACKET=y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
 CONFIG_NF_CONNTRACK_TFTP=y
-CONFIG_NFS_V3=y
 CONFIG_NOP_TRACER=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_INET=y
@@ -650,6 +640,7 @@ CONFIG_USE_GENERIC_SMP_HELPERS=y
 CONFIG_SERIO_SERPORT=y
 CONFIG_LIRC=y
 CONFIG_BT_BNEP=y
+CONFIG_CPU_FREQ_LCD_FREQ_DFS=y
 CONFIG_BLK_DEV_RAM_COUNT=16
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC1=15360
 CONFIG_INET_XFRM_MODE_TUNNEL=y
@@ -695,6 +686,7 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_NETFILTER_XT_MATCH_MAC=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_GENERIC_ALLOCATOR=y
+CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_KALLSYMS_ALL=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_LIBCRC32C=y
@@ -716,7 +708,7 @@ CONFIG_NEON=y
 CONFIG_GENERIC_ACL=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="-LiteGX-v2.9"
+CONFIG_LOCALVERSION="-LiteGX-v4.2.0"
 CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
 CONFIG_FUNCTION_TRACER=y
@@ -752,7 +744,6 @@ CONFIG_SEC_MODEM_M0=y
 CONFIG_SAMSUNG_IRQ_UART=y
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_VIDEO_DEV=y
-CONFIG_NFS_V4=y
 CONFIG_DYNAMIC_FTRACE=y
 CONFIG_EXYNOS_MCT=y
 CONFIG_HAS_DMA=y
@@ -947,12 +938,11 @@ CONFIG_S3C_GPIO_PULL_UPDOWN=y
 CONFIG_S3C_DEV_I2C3=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_DEBUG_LIST=y
-CONFIG_NFS_USE_KERNEL_DNS=y
 CONFIG_CPU_EXYNOS4412=y
 CONFIG_SYSCTL=y
 CONFIG_LOCAL_TIMERS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
-CONFIG_CIFS=m
+CONFIG_TCP_CONG_BIC=y
 CONFIG_NET_NS=y
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC2=0
 CONFIG_HAVE_PERF_EVENTS=y
@@ -993,6 +983,7 @@ CONFIG_TEXTSEARCH=y
 CONFIG_WLAN_REGION_CODE=100
 CONFIG_USB_SUPPORT=y
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
+CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE=y
 CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_SYMBOL_SIZE=8
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
