--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -10,6 +10,7 @@ CONFIG_BLK_DEV_DM=Y
 CONFIG_BT_RFCOMM=Y
 CONFIG_HID_ROCCAT_PYRA=Y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=Y
+CONFIG_CRYPTO_MD4=M
 CONFIG_SERIAL_S5PV210=Y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=Y
 CONFIG_RC_CORE=Y
@@ -55,6 +56,7 @@ CONFIG_HID_SUNPLUS=Y
 CONFIG_HID_PICOLCD=Y
 CONFIG_SND_SOC=Y
 CONFIG_HID_THRUSTMASTER=Y
+CONFIG_DNS_RESOLVER=Y
 CONFIG_CRYPTO_AUTHENC=Y
 CONFIG_ION_EXYNOS=Y
 CONFIG_LEDS_AN30259A=Y
@@ -63,12 +65,14 @@ CONFIG_CRYPTO_DES=Y
 CONFIG_NLS_CODEPAGE_437=Y
 CONFIG_NET_CLS_U32=Y
 CONFIG_SERIO=Y
+CONFIG_SUNRPC_GSS=M
 CONFIG_NET_EMATCH_U32=Y
 CONFIG_NF_CONNTRACK_SANE=Y
 CONFIG_NF_CT_PROTO_DCCP=Y
 CONFIG_ZLIB_INFLATE=Y
 CONFIG_CRYPTO_TWOFISH_COMMON=Y
 CONFIG_TOUCHSCREEN_MELFAS=Y
+CONFIG_LOCKD=M
 CONFIG_ANDROID_TIMED_GPIO=Y
 CONFIG_NETFILTER_XT_MATCH_STRING=Y
 CONFIG_IP_NF_TARGET_LOG=Y
@@ -177,6 +181,7 @@ CONFIG_SOUND=Y
 CONFIG_UNIX=Y
 CONFIG_CRYPTO_HASH2=Y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=Y
+CONFIG_NFS_FS=M
 CONFIG_BCM4334=Y
 CONFIG_INET_ESP=Y
 CONFIG_HID_QUANTA=Y
@@ -202,6 +207,7 @@ CONFIG_REGULATOR_MAX77693=Y
 CONFIG_NF_CONNTRACK_AMANDA=Y
 CONFIG_FB_CFB_IMAGEBLIT=Y
 CONFIG_ZLIB_DEFLATE=Y
+CONFIG_SUNRPC=M
 CONFIG_FW_LOADER=Y
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=Y
 CONFIG_EXT4_FS=Y
@@ -332,11 +338,13 @@ CONFIG_NF_NAT_PROTO_UDPLITE=Y
 CONFIG_ANDROID_LOGGER=Y
 CONFIG_HW_RANDOM=Y
 CONFIG_VIDEOBUF2_CORE=Y
+CONFIG_NTFS_FS=M
 CONFIG_CRYPTO_BLKCIPHER2=Y
 CONFIG_RC_MAP=Y
 CONFIG_HID_PANTHERLORD=Y
 CONFIG_SND=Y
 CONFIG_IR_RC6_DECODER=Y
+CONFIG_CIFS=M
 CONFIG_TCP_CONG_BIC=Y
 CONFIG_HID_MULTITOUCH=Y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=Y
