--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -33,8 +33,10 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_DATA_SIZE=128
 CONFIG_HID_ROCCAT_PYRA=y
 CONFIG_INOTIFY_USER=y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=y
+CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_VIDEO_EXYNOS_FIMC_IS=y
+CONFIG_CRYPTO_MD4=m
 CONFIG_SERIAL_S5PV210=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_EXYNOS4_SETUP_CSIS=y
@@ -146,6 +148,7 @@ CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_TIMERFD=y
 CONFIG_HID_THRUSTMASTER=y
+CONFIG_DNS_RESOLVER=y
 CONFIG_TRACEPOINTS=y
 CONFIG_CRYPTO_AUTHENC=y
 CONFIG_S3C64XX_DEV_SPI=y
@@ -169,6 +172,7 @@ CONFIG_NET_CLS_U32=y
 CONFIG_ARM_GIC=y
 CONFIG_SERIO=y
 CONFIG_SCHEDSTATS=y
+CONFIG_SUNRPC_GSS=m
 CONFIG_RTC_INTF_SYSFS=y
 CONFIG_NET_EMATCH_U32=y
 CONFIG_BLK_DEV_INITRD=y
@@ -186,6 +190,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_TOUCHSCREEN_MELFAS=y
 CONFIG_USB_DEVICE_CLASS=y
+CONFIG_LOCKD=m
 CONFIG_MACH_M0=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ARM=y
@@ -233,6 +238,7 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 CONFIG_DEVKMEM=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
 CONFIG_PPP_DEFLATE=y
+CONFIG_NTFS_RW=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_VT=y
 CONFIG_USE_LEGACY_MFC=y
@@ -467,6 +473,7 @@ CONFIG_VIDEO_SAMSUNG_MEMSIZE_FLITE1=10240
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_ARM_ERRATA_743622=y
 CONFIG_NETDEV_10000=y
+CONFIG_NFS_FS=m
 CONFIG_BCM4334=y
 CONFIG_ARCH_EXYNOS4=y
 CONFIG_XPS=y
@@ -484,6 +491,7 @@ CONFIG_PM_OPP=y
 CONFIG_KEYBOARD_ATKBD=y
 CONFIG_NF_NAT=y
 CONFIG_CPU_IDLE=y
+CONFIG_NFS_COMMON=y
 CONFIG_LEDS_AAT1290A=y
 CONFIG_REGULATOR=y
 CONFIG_FAIR_GROUP_SCHED=y
@@ -554,6 +562,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_BASE_FULL=y
 CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_SUNRPC=m
 CONFIG_VIDEO_TVOUT=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_GPIO_SYSFS=y
@@ -572,6 +581,7 @@ CONFIG_CRYPTO_SHA1=y
 CONFIG_ARM_DMA_MEM_BUFFERABLE=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_LOCKD_V4=y
 CONFIG_USB_GADGET_DUALSPEED=y
 CONFIG_WATCHDOG=y
 CONFIG_HAS_IOMEM=y
@@ -607,6 +617,7 @@ CONFIG_AID_DIMMING=y
 CONFIG_PACKET=y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
 CONFIG_NF_CONNTRACK_TFTP=y
+CONFIG_NFS_V3=y
 CONFIG_NOP_TRACER=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_INET=y
@@ -708,7 +719,7 @@ CONFIG_NEON=y
 CONFIG_GENERIC_ACL=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_COMPAT_BRK=y
-CONFIG_LOCALVERSION="-LiteGX-v4.2.0"
+CONFIG_LOCALVERSION="-LiteGX-v4.3.0"
 CONFIG_MACH_NO_WESTBRIDGE=y
 CONFIG_CRYPTO=y
 CONFIG_FUNCTION_TRACER=y
@@ -744,6 +755,7 @@ CONFIG_SEC_MODEM_M0=y
 CONFIG_SAMSUNG_IRQ_UART=y
 CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_VIDEO_DEV=y
+CONFIG_NFS_V4=y
 CONFIG_DYNAMIC_FTRACE=y
 CONFIG_EXYNOS_MCT=y
 CONFIG_HAS_DMA=y
@@ -915,6 +927,7 @@ CONFIG_DEBUG_S3C_UART=2
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_VIDEO_UMP=y
 CONFIG_VIDEOBUF2_CORE=y
+CONFIG_NTFS_FS=m
 CONFIG_ARCH_EXYNOS=y
 CONFIG_BASE_SMALL=0
 CONFIG_CRYPTO_BLKCIPHER2=y
@@ -938,10 +951,12 @@ CONFIG_S3C_GPIO_PULL_UPDOWN=y
 CONFIG_S3C_DEV_I2C3=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_DEBUG_LIST=y
+CONFIG_NFS_USE_KERNEL_DNS=y
 CONFIG_CPU_EXYNOS4412=y
 CONFIG_SYSCTL=y
 CONFIG_LOCAL_TIMERS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
+CONFIG_CIFS=m
 CONFIG_TCP_CONG_BIC=y
 CONFIG_NET_NS=y
 CONFIG_VIDEO_SAMSUNG_MEMSIZE_FIMC2=0
